Header toolbar covers the title and prevent sorting the column
Closes #116

--- a/src/style.scss
+++ b/src/style.scss
@@ -294,7 +294,7 @@ $lu_drag_over: #979797;
     position: absolute;
     text-align: right;
     right: 5px;
-    bottom: 0;
+    top: 0;
     border-radius: 3px 0 0 3px;
     cursor: auto;
     background: #6D6C6C;
@@ -414,6 +414,37 @@ $lu_drag_over: #979797;
       &:hover {
         & > div.toolbar {
           display: block;
+          padding: 7px;
+
+          i {
+            display: none;
+          }
+
+          // show menu icon and provide extra spacing, that the menu doesn't close immediately when the mouse leaves the toolbar
+          &:before {
+            z-index: -1;
+            content: '\f0c9';
+            font-family: FontAwesome, sans-serif;
+            font-size: 7pt;
+            padding: 1px 2px 1px 1px;
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: -5px;
+            left: -5px;
+          }
+
+          &:hover {
+            padding: 0 10px 0 5px; // give more padding to the right to prevent clicking the hide button
+
+            &:before {
+              content: '';
+            }
+
+            i {
+              display: inline-block;
+            }
+          }
         }
       }
 
